--- a/styles/scss/_layout.scss
+++ b/styles/scss/_layout.scss
@@ -330,11 +330,12 @@ body.theme-dark .contact-form {
 
 body.theme-dark .faq-question {
   background: rgba(37, 37, 37, 0.6);
-  color: #fff;
+  color: black;
 }
 
 body.theme-dark .faq-answer {
   background: transparent;
+  color: black;
 }
 
 body.theme-dark .btn-outline-orange {
